fix: resolve double scrollbar issue and resize theme toggle button

--- a/src/styles/ThemeToggle.module.css
+++ b/src/styles/ThemeToggle.module.css
@@ -1,6 +1,6 @@
 /* Theme Toggle Switch */
 .switch {
-    --font-size: 4px;
+    --font-size: 2.5px;
     --height: 10em;
     --width: 24em;
     --margin: 0.5em;
